--- a/ProyectoVentaProducto/web/src/main/webapp/registrar_usuario.xhtml
+++ b/ProyectoVentaProducto/web/src/main/webapp/registrar_usuario.xhtml
@@ -7,12 +7,12 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
-<head>
+<h:head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Crear nuevo usuario</title>
-</head>
-<body>
+</h:head>
+<h:body>
 <h:form>
 <h:panelGrid columns="2" cellpadding="5">
     <p:outputLabel for="codigo_usuario" value="codigo:" />
@@ -34,5 +34,5 @@
 <p:commandButton action="#{usuarioBean.registrarUsuario}" value="Registrar" update="@form" />
 </h:form>
 
-</body>
+</h:body>
 </html>
