creacion de barra de busqueda y clases

--- a/ProyectoVentaProducto/web/src/main/webapp/crear_producto.xhtml
+++ b/ProyectoVentaProducto/web/src/main/webapp/crear_producto.xhtml
@@ -13,7 +13,7 @@
     <title>Crear nuevo producto</title>
 </h:head>
 <h:body>
-    <p:panel header="registrar usuarios">
+    <p:panel header="crear producto">
         <h:form>
             <h:panelGrid columns="2" cellpadding="5">
                 <p:outputLabel for="nombre_producto" value="nombre:" />
