--- a/ProyectoVentaProducto/web/src/main/webapp/index.xhtml
+++ b/ProyectoVentaProducto/web/src/main/webapp/index.xhtml
@@ -10,22 +10,66 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Página de Inicio</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+
 </h:head>
 <h:body>
     <div id="header">
-        <h1>Unishop</h1>
-        <ul>
-            <li><a href="index.xhtml">inicio</a> </li>
-            <li><a href="registrar_usuario.xhtml">Registrar usuario</a> </li>
-            <li><a href="crear_producto.xhtml">Crear producto</a> </li>
-        </ul>
-        <h:form>
-            <p:inputText placeholder="Que producto esta buscando?" required="true" value="#{busquedaBean.busqueda}"></p:inputText>
-            <p:commandButton icon="pi pi-search" action="#{busquedaBean.buscar}" update="@form"></p:commandButton>
-        </h:form>
+
+        <header>
+            <div class="px-3 py-2 bg-dark text-white">
+                <div class="container">
+                    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+                        <a href="/" class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
+                            <span class="pi pi-shopping-cart" style="font-size: 2rem;margin-right: 5px"/>
+                            <span class="fs-4">Unishop</span>
+                        </a>
+
+                        <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small" style="text-align: center">
+                            <li>
+                                <a href="index.xhtml" class="nav-link text-white">
+                                    <i class="pi pi-home bi d-block mx-auto mb-1" style="font-size: 2rem"></i>
+                                    Inicio
+                                </a>
+                            </li>
+                            <li>
+                                <a href="crear_producto.xhtml" class="nav-link text-white">
+                                    <i class="pi pi-save bi d-block mx-auto mb-1" style="font-size: 2rem"></i>
+                                    Crear producto
+                                </a>
+                            </li>
+                            <li>
+                                <a href="registrar_usuario.xhtml" class="nav-link text-white">
+                                    <i class="pi pi-user bi d-block mx-auto mb-1" style="font-size: 2rem"></i>
+                                    Usuarios
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="px-3 py-2 border-bottom mb-3">
+                <div class="container d-flex flex-wrap justify-content-center">
+
+                        <div class="col-12 col-lg-auto mb-2 mb-lg-0 me-lg-auto ui-inputgroup">
+                            <h:form>
+                                <p:inputText style="width:300px " placeholder="Que producto esta buscando?" required="true" value="#{busquedaBean.busqueda}" />
+                                <p:commandButton icon="pi pi-search" action="#{busquedaBean.buscar}" update="@form" />
+                            </h:form>
+                        </div>
+
+
+                    <div class="text-end">
+                        <button type="button" class="btn btn-light text-dark me-2">Login</button>
+                        <button type="button" class="btn btn-primary">Sign-up</button>
+                    </div>
+                </div>
+            </div>
+        </header>
     </div>
     <div id="content">
 
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </h:body>
 </html>
