correccion de un error en un boton

--- a/ProyectoVentaProducto/web/src/main/webapp/index.xhtml
+++ b/ProyectoVentaProducto/web/src/main/webapp/index.xhtml
@@ -61,7 +61,9 @@
 
                     <div class="text-end">
                         <button type="button" class="btn btn-light text-dark me-2">Login</button>
-                        <button type="button" class="btn btn-primary">Sign-up</button>
+                        <a href="registrar_usuario.xhtml">
+                            <button type="button" class="btn btn-primary" >Sign-up</button>
+                        </a>
                     </div>
                 </div>
             </div>
