listar productos pero feo

--- a/ProyectoVentaProducto/web/src/main/webapp/index.xhtml
+++ b/ProyectoVentaProducto/web/src/main/webapp/index.xhtml
@@ -73,8 +73,10 @@
         </header>
     </div>
     <div id="content">
-
+        <div class="container">
+            <h1>Lista de productos</h1>
+            <p>#{inicioBean.productos}</p>
+        </div>
     </div>
-
 </h:body>
 </html>
