--- a/ProyectoVentaProducto/web/src/main/webapp/index.xhtml
+++ b/ProyectoVentaProducto/web/src/main/webapp/index.xhtml
@@ -13,63 +13,56 @@
    <h:outputStylesheet library="css"  name ="bootstrap.min.css"/>
     <h:outputStylesheet library="css" name="styles.css" />
     <h:outputScript library="js" name="bootstrap.bundle.min.js"/>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet"/>
 </h:head>
 <h:body>
     <div id="header">
-
         <header>
             <div class="px-3 py-2 bg-dark text-white">
                 <div class="container">
                     <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                         <a href="/" class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
-                            <span class="pi pi-shopping-cart" style="font-size: 2rem;margin-right: 5px"/>
-                            <span class="fs-4">Unishop</span>
+                            <span class="material-icons-outlined" style="font-size: 2rem;margin-right: 5px">payment</span>
+                            <span class="fs-4" style="margin-left: 2px"> Unishop</span>
                         </a>
 
-                        <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small" style="text-align: center">
-                            <li>
-                                <a href="index.xhtml" class="nav-link text-white">
-                                    <i class="pi pi-home bi d-block mx-auto mb-1 icon-menu" ></i>
-                                    Inicio
-                                </a>
-                            </li>
-                            <li>
-                                <a href="crear_producto.xhtml" class="nav-link text-white">
-                                    <i class="pi pi-save bi d-block mx-auto mb-1 icon-menu" ></i>
+                        <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small"  >
+                            <li style="margin-left: 5px ;margin-right: 5px">
+                                <a href="crear_producto.xhtml" class="nav-link text-white" style="margin-left: -30px">
+                                    <i class="material-icons-outlined" style="font-size: 2rem;margin-left: 30px">create_new_folder</i>
+                                    <br></br>
                                     Crear producto
                                 </a>
                             </li>
-                            <li>
-                                <a href="registrar_usuario.xhtml" class="nav-link text-white">
-                                    <i class="pi pi-user bi d-block mx-auto mb-1 icon-menu" ></i>
-                                    Usuarios
+                            <li style="margin-left: 5px ;margin-right: 5px ;justify-content: space-between" >
+                                <a href="registrar_usuario.xhtml" class="nav-link text-white" style="margin-left: -35px">
+                                    <i class="material-icons-outlined" style="font-size: 2rem;margin-left: 25px">app_registration</i>
+                                    <br></br>
+                                    Registrarse
+                                </a>
+                            </li>
+                            <li style="margin-left: 5px ;margin-right: 5px">
+                                <a href="registrar_usuario.xhtml" class="nav-link text-white" style="margin-left: -35px">
+                                    <span class="material-icons" style="font-size: 2rem;margin-left: 25px">person</span>
+                                    <br></br>
+                                    Iniciar sesion
                                 </a>
                             </li>
                         </ul>
                     </div>
                 </div>
             </div>
-            <div class="px-3 py-2 border-bottom mb-3">
-                <div class="container d-flex flex-wrap justify-content-center">
-
-                        <div class="col-12 col-lg-auto mb-2 mb-lg-0 me-lg-auto ui-inputgroup">
-                            <h:form>
-                                <p:inputText style="width:300px " placeholder="Que producto esta buscando?" required="true" value="#{busquedaBean.busqueda}" />
-                                <p:commandButton icon="pi pi-search" action="#{busquedaBean.buscar}" update="@form" />
-                            </h:form>
-                        </div>
-
-
-                    <div class="text-end">
-                        <h:form>
-                            <h:commandButton value="Login" styleClass="btn btn-light text-dark me-2"/>
-                            <a href="registrar_usuario.xhtml">
-                                <h:commandButton value="Registrarse" styleClass="btn btn-primary" action="registrar_usuario?faces-redirect=true"/>
-                            </a>
-                        </h:form>
-                    </div>
+            <nav class="navbar navbar-light bg-light">
+                <div class="container-fluid">
+                    <a class="navbar-brand"></a>
+                    <h:form style="margin-right: 95px">
+                        <p:inputText style="width:300px " placeholder="Que producto esta buscando?" required="true" value="#{busquedaBean.busqueda}" />
+                        <p:commandButton icon="pi pi-search" action="#{busquedaBean.buscar}" update="@form" />
+                    </h:form>
                 </div>
-            </div>
+            </nav>
         </header>
     </div>
     <div id="content">
