mejora del index

--- a/ProyectoVentaProducto/web/src/main/webapp/index.xhtml
+++ b/ProyectoVentaProducto/web/src/main/webapp/index.xhtml
@@ -24,30 +24,26 @@
                 <div class="container">
                     <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                         <a href="/" class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
-                            <span class="material-icons-outlined" style="font-size: 2rem;margin-right: 5px">payment</span>
+                            <span class="material-icons-outlined" style="font-size: 2rem ; margin-right: 5px">payment</span>
                             <span class="fs-4" style="margin-left: 2px"> Unishop</span>
                         </a>
-
                         <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small"  >
-                            <li style="margin-left: 5px ;margin-right: 5px">
-                                <a href="crear_producto.xhtml" class="nav-link text-white" style="margin-left: -30px">
-                                    <i class="material-icons-outlined" style="font-size: 2rem;margin-left: 30px">create_new_folder</i>
-                                    <br></br>
-                                    Crear producto
+                            <li>
+                                <a href="crear_producto.xhtml" class="nav-link text-white">
+                                    <i class="material-icons icono" style="font-size: 2rem">create_new_folder</i>
+                                    <p>Crear producto</p>
                                 </a>
                             </li>
-                            <li style="margin-left: 5px ;margin-right: 5px ;justify-content: space-between" >
-                                <a href="registrar_usuario.xhtml" class="nav-link text-white" style="margin-left: -35px">
-                                    <i class="material-icons-outlined" style="font-size: 2rem;margin-left: 25px">app_registration</i>
-                                    <br></br>
-                                    Registrarse
+                            <li>
+                                <a href="registrar_usuario.xhtml" class="nav-link text-white">
+                                    <i class="material-icons icono" style="font-size: 2rem">app_registration</i>
+                                    <p>Registrarse</p>
                                 </a>
                             </li>
-                            <li style="margin-left: 5px ;margin-right: 5px">
-                                <a href="registrar_usuario.xhtml" class="nav-link text-white" style="margin-left: -35px">
-                                    <span class="material-icons" style="font-size: 2rem;margin-left: 25px">person</span>
-                                    <br></br>
-                                    Iniciar sesion
+                            <li>
+                                <a href="registrar_usuario.xhtml" class="nav-link text-white">
+                                    <span class="material-icons icono" style="font-size: 2rem">person</span>
+                                    <p>Iniciar sesion</p>
                                 </a>
                             </li>
                         </ul>
