--- a/ProyectoVentaProducto/web/src/main/webapp/index.xhtml
+++ b/ProyectoVentaProducto/web/src/main/webapp/index.xhtml
@@ -64,7 +64,47 @@
     <div id="content">
         <div class="container">
             <h1>Lista de productos</h1>
-            <p>#{inicioBean.productos}</p>
+            <h:form>
+                <p:dataView value="#{inicioBean.productos}" paginator="true" rows="13" var="pro" gridIcon="pi pi-th-large" listIcon="pi pi-bars">
+                    <p:dataViewGridItem>
+                        <div class="card" >
+                            <img src="/uploads/#{pro.imagenPrincipal}" class="card-img-top"
+                                 alt="..." />
+                            <div class="card-body">
+                                <h5 class="card-title">#{pro.nombre}</h5>
+                                <p class="card-text">#{pro.precio}</p>
+                                <hr/>
+                                <p:commandButton value="Ver detalle" styleClass="ui-button-raised" icon="pi pi-arrow-right" iconPos="right" action="#{inicioBean.irADetalle(pro.codigoProducto)}"/>
+                            </div>
+                        </div>
+                    </p:dataViewGridItem>
+                    <p:dataViewListItem>
+                        <div class="row d-flex list-pro" >
+                            <div class="col-lg-2 col-md-1" style="text-align: center" >
+                                <p:graphicImage url="/uploads/#{pro.imagenPrincipal}" styleClass="imagen-producto" />
+                            </div>
+                            <div class="col-lg-8 col-md-1 align-self-center" >
+                                <p:outputPanel>
+                                    <h:panelGrid columns="2" cellpadding="5">
+                                        <h:outputText value="Nombre:" />
+                                        <h:outputText value="#{pro.nombre}" style="font-weight:bold" />
+                                        <h:outputText value="Precio:" />
+                                        <h:outputText value="$ #{pro.precio}" />
+                                        <h:outputText value="Categorías:" />
+                                        <h:outputText value="#{pro.categoriasProducto}" />
+                                        <h:outputText value="Descripción:" />
+                                        <h:outputText value="#{pro.descripcion}" />
+                                    </h:panelGrid>
+                                </p:outputPanel>
+                            </div>
+                            <div class="col-lg-2 col-md-1 align-self-center" >
+                                <p:commandButton value="Ver detalle" styleClass="ui-button-raised" icon="pi pi-arrow-right" iconPos="right" action="#{inicioBean.irADetalle(pro.codigoProducto)}"/>
+                            </div>
+                        </div>
+                    </p:dataViewListItem>
+                </p:dataView>
+            </h:form>
+            <p></p>
         </div>
     </div>
 </h:body>
