Informacion en detalle Producto y guardar comentarios

--- a/ProyectoVentaProducto/web/src/main/webapp/resultado_busqueda.xhtml
+++ b/ProyectoVentaProducto/web/src/main/webapp/resultado_busqueda.xhtml
@@ -10,9 +10,53 @@
 <h:head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <h:outputStylesheet library="css"  name ="bootstrap.min.css"/>
+    <h:outputStylesheet library="css" name="styles.css" />
+    <h:outputScript library="js" name="bootstrap.bundle.min.js"/>
     <title>Resultados de busqueda</title>
 </h:head>
 <h:body>
-    <p>#{busquedaBean.productos}</p>
+    <div class = "container">
+        <h:form>
+            <p:dataView value="#{busquedaBean.productos}" paginator="true" rows="13" var="pro" gridIcon="pi pi-th-large" listIcon="pi pi-bars">
+                <p:dataViewGridItem>
+                    <div class="card" >
+                        <img src="/uploads/#{pro.imagenPrincipal}" class="card-img-top"
+                             alt="..." />
+                        <div class="card-body">
+                            <h5 class="card-title">#{pro.nombre}</h5>
+                            <p class="card-text">#{pro.precio}</p>
+                            <hr/>
+                            <p:commandButton value="Ver detalle" styleClass="ui-button-raised" icon="pi pi-arrow-right" iconPos="right" action="#{inicioBean.irADetalle(pro.codigoProducto)}"/>
+                        </div>
+                    </div>
+                </p:dataViewGridItem>
+                <p:dataViewListItem>
+                    <div class="row d-flex list-pro" >
+                        <div class="col-lg-2 col-md-1" style="text-align: center" >
+                            <p:graphicImage url="/uploads/#{pro.imagenPrincipal}" styleClass="imagen-producto" />
+                        </div>
+                        <div class="col-lg-8 col-md-1 align-self-center" >
+                            <p:outputPanel>
+                                <h:panelGrid columns="2" cellpadding="5">
+                                    <h:outputText value="Nombre:" />
+                                    <h:outputText value="#{pro.nombre}" style="font-weight:bold" />
+                                    <h:outputText value="Precio:" />
+                                    <h:outputText value="$ #{pro.precio}" />
+                                    <h:outputText value="Categorías:" />
+                                    <h:outputText value="#{pro.categoriasProducto}" />
+                                    <h:outputText value="Descripción:" />
+                                    <h:outputText value="#{pro.descripcion}" />
+                                </h:panelGrid>
+                            </p:outputPanel>
+                        </div>
+                        <div class="col-lg-2 col-md-1 align-self-center" >
+                            <p:commandButton value="Ver detalle" styleClass="ui-button-raised" icon="pi pi-arrow-right" iconPos="right" action="#{inicioBean.irADetalle(pro.codigoProducto)}"/>
+                        </div>
+                    </div>
+                </p:dataViewListItem>
+            </p:dataView>
+        </h:form>
+    </div>
 </h:body>
 </html>
