--- a/ProyectoVentaProducto/web/src/main/webapp/detalle_producto.xhtml
+++ b/ProyectoVentaProducto/web/src/main/webapp/detalle_producto.xhtml
@@ -17,6 +17,31 @@
     <title>Detalle del producto</title>
 </h:head>
 <h:body>
+    <div class = "container">
+        <p>#{detalleProductoBean.producto}</p>
+        <p:panel header="Comentarios">
+
+
+            <p:dataList id="lista-c" value="#{detalleProductoBean.comentarios}" var ="comentario" emptyMessage="no hay comentarios">
+                <p> #{comentario.mensaje} - #{comentario.usuario.nombre}</p>
+                <p:rating value="#{comentario.calificacion}" readonly="true" />
+            </p:dataList>
+        </p:panel>
+        <p:panel header="Hacer un comentario" styleClass="mt-3" >
+            <h:form id="crear-comentario">
+                <h:panelGrid columns="2" cellpadding="3">
+                    <p:inputTextarea value="#{detalleProductoBean.nuevoComentario.mensaje}"
+                                     required="true" styleClass="comentario-usuario" />
+                    <p:rating value="#{detalleProductoBean.nuevoComentario.calificacion}"
+                              required="true"/>
+                </h:panelGrid>
+                <p:commandButton value="Comentar" icon="pi pi-comment" iconPos="left" update="@form,
+lista-c" styleClass="mt-4" action="#{detalleProductoBean.crearComentario}" />
+                <p:growl for="msj-pregunta" showDetail="true" />
+            </h:form>
+        </p:panel>
+
+    </div>
 
 </h:body>
 </html>
