--- a/ProyectoVentaProducto/web/src/main/webapp/crear_producto.xhtml
+++ b/ProyectoVentaProducto/web/src/main/webapp/crear_producto.xhtml
@@ -7,12 +7,9 @@
        xmlns:h="http://xmlns.jcp.org/jsf/html"
        xmlns:p="http://primefaces.org/ui"
        xmlns:f="http://xmlns.jcp.org/jsf/core">
-<h:head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Crear nuevo producto</title>
-</h:head>
-<h:body>
+<ui:composition template="WEB-INF/template.xhtml">
+    <ui:define name="title">Crear productos</ui:define>
+    <ui:define name="content">
     <p:panel header="crear producto">
         <h:form>
             <h:panelGrid columns="2" cellpadding="5">
@@ -53,5 +50,6 @@
         </h:form>
 
     </p:panel>
-</h:body>
+    </ui:define>
+</ui:composition>
 </html>
