--- a/ProyectoVentaProducto/web/src/main/webapp/detalle_producto.xhtml
+++ b/ProyectoVentaProducto/web/src/main/webapp/detalle_producto.xhtml
@@ -7,16 +7,10 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
-<h:head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Página de Inicio</title>
-    <h:outputStylesheet library="css"  name ="bootstrap.min.css"/>
-    <h:outputStylesheet library="css" name="styles.css" />
-    <h:outputScript library="js" name="bootstrap.bundle.min.js"/>
-    <title>Detalle del producto</title>
-</h:head>
-<h:body>
+<ui:composition template="WEB-INF/template.xhtml">
+    <ui:define name="title">#{detalleProductoBean.producto.nombre}</ui:define>
+
+    <ui:define name="content">
     <div class = "container">
         <p>#{detalleProductoBean.producto}</p>
         <p:panel header="Comentarios">
@@ -42,6 +36,6 @@ lista-c" styleClass="mt-4" action="#{detalleProductoBean.crearComentario}" />
         </p:panel>
 
     </div>
-
-</h:body>
+    </ui:define>
+</ui:composition>
 </html>
