--- a/ProyectoVentaProducto/web/src/main/webapp/index.xhtml
+++ b/ProyectoVentaProducto/web/src/main/webapp/index.xhtml
@@ -6,20 +6,7 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
-<h:head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Página de Inicio</title>
-   <h:outputStylesheet library="css"  name ="bootstrap.min.css"/>
-    <h:outputStylesheet library="css" name="styles.css" />
-    <h:outputScript library="js" name="bootstrap.bundle.min.js"/>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet"/>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet"/>
-</h:head>
-<h:body>
-    <div id="header">
-        <header>
+
             <div class="px-3 py-2 bg-dark text-white">
                 <div class="container">
                     <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
@@ -50,6 +37,7 @@
                     </div>
                 </div>
             </div>
+
             <nav class="navbar navbar-light bg-light">
                 <div class="container-fluid">
                     <a class="navbar-brand"></a>
@@ -59,10 +47,10 @@
                     </h:form>
                 </div>
             </nav>
-        </header>
-    </div>
-    <div id="content">
-        <div class="container">
+            <ui:composition template="WEB-INF/template.xhtml">
+                <ui:define name="title">Pagina de inicio</ui:define>
+
+                <ui:define name="content">
             <h1>Lista de productos</h1>
             <h:form>
                 <p:dataView value="#{inicioBean.productos}" paginator="true" rows="13" var="pro" gridIcon="pi pi-th-large" listIcon="pi pi-bars">
@@ -104,8 +92,6 @@
                     </p:dataViewListItem>
                 </p:dataView>
             </h:form>
-            <p></p>
-        </div>
-    </div>
-</h:body>
+</ui:define>
+</ui:composition>
 </html>
