--- a/ProyectoVentaProducto/web/src/main/webapp/registrar_usuario.xhtml
+++ b/ProyectoVentaProducto/web/src/main/webapp/registrar_usuario.xhtml
@@ -7,12 +7,10 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
-<h:head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Crear nuevo usuario</title>
-</h:head>
-<h:body>
+<ui:composition template="WEB-INF/template.xhtml">
+    <ui:define name="title">Registro de Usuario</ui:define>
+
+    <ui:define name="content">
     <p:panel header="registrar usuarios">
 <h:form>
 <h:panelGrid columns="2" cellpadding="5">
@@ -40,5 +38,6 @@
 </h:form>
 
     </p:panel>
-</h:body>
+    </ui:define>
+</ui:composition>
 </html>
