--- a/ProyectoVentaProducto/web/src/main/webapp/resultado_busqueda.xhtml
+++ b/ProyectoVentaProducto/web/src/main/webapp/resultado_busqueda.xhtml
@@ -7,15 +7,10 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
-<h:head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <h:outputStylesheet library="css"  name ="bootstrap.min.css"/>
-    <h:outputStylesheet library="css" name="styles.css" />
-    <h:outputScript library="js" name="bootstrap.bundle.min.js"/>
-    <title>Resultados de busqueda</title>
-</h:head>
-<h:body>
+<ui:composition template="WEB-INF/template.xhtml">
+    <ui:define name="title">Resultados de busqueda</ui:define>
+    <ui:define name="content">
+        <h2>Resultados de busqueda para '${busquedaBean.busquedaParam}'</h2>
     <div class = "container">
         <h:form>
             <p:dataView value="#{busquedaBean.productos}" paginator="true" rows="13" var="pro" gridIcon="pi pi-th-large" listIcon="pi pi-bars">
@@ -58,5 +53,6 @@
             </p:dataView>
         </h:form>
     </div>
-</h:body>
+    </ui:define>
+</ui:composition>
 </html>
