se corrigio el error visual anterior

--- a/ProyectoVentaProducto/web/src/main/webapp/index.xhtml
+++ b/ProyectoVentaProducto/web/src/main/webapp/index.xhtml
@@ -68,7 +68,7 @@
                     </p:dataViewGridItem>
                     <p:dataViewListItem>
                         <div class="row d-flex list-pro" >
-                            <div class="col-lg-2 col-md-1" style="text-align: center" >
+                            <div class="col-lg-2 col-md-1" style="text-align: center;vertical-align: middle;display: flex;" >
                                 <p:graphicImage url="/uploads/#{pro.imagenPrincipal}" styleClass="imagen-producto" />
                             </div>
                             <div class="col-lg-8 col-md-1 align-self-center" >
