--- a/ProyectoVentaProducto/web/src/main/webapp/WEB-INF/template.xhtml
+++ b/ProyectoVentaProducto/web/src/main/webapp/WEB-INF/template.xhtml
@@ -62,8 +62,25 @@
                     </h:form>
                 </div>
             </nav>
-
     </div>
+    <p:dialog header="Iniciar sesión" showEffect="fade" widgetVar="login" modal="true"
+              rendered="#{!seguridadBean.autenticado}" >
+    <h:form >
+        <h:panelGrid columns="3" cellpadding="5">
+            <p:outputLabel for="email_login" value="Email:" />
+            <p:inputText id="email_login" value="#{seguridadBean.email}" required="true" />
+            <p:message for="email_login" />
+            <p:outputLabel for="password_login" value="Password:" />
+            <p:password id="password_login" value="#{seguridadBean.password}" required="true"
+            />
+            <p:message for="password_login" />
+        </h:panelGrid>
+        <p:commandButton value="Iniciar Sesión" action="#{seguridadBean.iniciarSesion}"
+                         styleClass="mt-4" update="@form" icon="pi pi-sign-in" iconPos="left" />
+        <p:growl for="login-bean" showDetail="true" />
+    </h:form>
+    </p:dialog>
+
     <div id="content">
         <div class="container">
             <ui:insert name="content">Contenido</ui:insert>
