inicio de sesion y algunos filtros

--- a/ProyectoVentaProducto/web/src/main/webapp/WEB-INF/template.xhtml
+++ b/ProyectoVentaProducto/web/src/main/webapp/WEB-INF/template.xhtml
@@ -22,7 +22,6 @@
 </h:head>
 <h:body>
     <div id="header">
-
             <div class="px-3 py-2 bg-dark text-white">
                 <div class="container">
                     <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
@@ -31,8 +30,8 @@
                             <span class="fs-4" style="margin-left: 2px"> Unishop</span>
                         </a>
                         <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small"  >
-                            <li>
-                                <a href="crear_producto.xhtml" class="nav-link text-white">
+                            <li jsf:rendered="#{seguridadBean.autenticado}">
+                                <a href="/usuario/crear_producto.xhtml" class="nav-link text-white" >
                                     <i class="material-icons icono" style="font-size: 2rem">create_new_folder</i>
                                     <p>Crear producto</p>
                                 </a>
@@ -53,15 +52,28 @@
                     </div>
                 </div>
             </div>
-            <nav class="navbar navbar-light bg-light">
-                <div class="container-fluid">
-                    <a class="navbar-brand"></a>
-                    <h:form style="margin-right: 95px">
-                        <p:inputText style="width:300px " placeholder="Que producto esta buscando?" required="true" value="#{busquedaBean.busqueda}" />
-                        <p:commandButton icon="pi pi-search" action="#{busquedaBean.buscar}" update="@form" />
+
+        <div class="px-3 py-2 border-bottom mb-3">
+            <div class="container d-flex flex-wrap justify-content-center">
+                <h:form class="col-12 col-lg-auto mb-2 mb-lg-0 me-lg-auto">
+                    <p:inputText style="width:300px " placeholder="Que producto esta buscando?" required="true" value="#{busquedaBean.busqueda}" />
+                    <p:commandButton icon="pi pi-search" action="#{busquedaBean.buscar}" update="@form" />
+                </h:form>
+
+                <div class="text-end">
+                    <h:form rendered="#{!seguridadBean.autenticado}" >
+                        <p:commandButton value="Login" styleClass="btn btn-primary"  onclick="PF('login').show()" icon="pi pi-sign-in"/>
+                        <p:commandButton value="Registrarse" styleClass="btn btn-primary" action="registrar_usuario?faces-redirect=true" icon="pi pi-user-plus"/>
                     </h:form>
+                     <div id="info-sesion" jsf:rendered="#{seguridadBean.autenticado}">
+                         <span>#{seguridadBean.usuarioSesion.nombre}</span>
+                         <h:form>
+                            <p:commandButton value="cerrar sesion" styleClass="btn btn-primary" action="#{seguridadBean.cerrarSesion}"/>
+                         </h:form>
+                     </div>
                 </div>
-            </nav>
+            </div>
+        </div>
     </div>
     <p:dialog header="Iniciar sesión" showEffect="fade" widgetVar="login" modal="true"
               rendered="#{!seguridadBean.autenticado}" >
@@ -71,8 +83,7 @@
             <p:inputText id="email_login" value="#{seguridadBean.email}" required="true" />
             <p:message for="email_login" />
             <p:outputLabel for="password_login" value="Password:" />
-            <p:password id="password_login" value="#{seguridadBean.password}" required="true"
-            />
+            <p:password id="password_login" value="#{seguridadBean.password}" required="true"/>
             <p:message for="password_login" />
         </h:panelGrid>
         <p:commandButton value="Iniciar Sesión" action="#{seguridadBean.iniciarSesion}"
@@ -80,6 +91,8 @@
         <p:growl for="login-bean" showDetail="true" />
     </h:form>
     </p:dialog>
+
+    <p:growl for="msj-bean" showDetail="true" />
 
     <div id="content">
         <div class="container">
