--- a/ProyectoVentaProducto/web/src/main/webapp/detalle_producto.xhtml
+++ b/ProyectoVentaProducto/web/src/main/webapp/detalle_producto.xhtml
@@ -27,7 +27,7 @@
                         <h1 class="mt-4">#{detalleProductoBean.producto.nombre}</h1>
                         <h1 class="mt-4">$#{detalleProductoBean.producto.precio}</h1>
 
-                        <h:form class="mt-4" >
+                        <h:form class="mt-4" rendered="#{seguridadBean.autenticado}" >
                             <p:commandButton value="Añadir al carrito" icon="pi pi-shopping-cart" update="@form" action="#{seguridadBean.agregarAlCarrito(detalleProductoBean.producto.codigo, detalleProductoBean.producto.precio, detalleProductoBean.producto.nombre, detalleProductoBean.producto.imagenPrincipal)}" />
                             <p:growl for="add-cart" showDetail="true" />
                         </h:form>
@@ -45,7 +45,7 @@
         <p:panel header="Descripción" styleClass="mt-3">
             <h:outputText value="#{detalleProductoBean.producto.descripcion}" escape="false"/>
         </p:panel>
-        <p:panel header="Hacer un comentario" styleClass="mt-3"  >
+        <p:panel header="Hacer un comentario" styleClass="mt-3"  rendered="#{seguridadBean.autenticado}">
             <h:form id="crear-comentario">
                 <h:panelGrid columns="2" cellpadding="3">
                     <p:inputTextarea value="#{detalleProductoBean.nuevoComentario.mensaje}" required="true" styleClass="comentario-usuario" />
