--- a/ProyectoVentaProducto/web/src/main/webapp/usuario/crear_producto.xhtml
+++ b/ProyectoVentaProducto/web/src/main/webapp/usuario/crear_producto.xhtml
@@ -7,7 +7,7 @@
        xmlns:h="http://xmlns.jcp.org/jsf/html"
        xmlns:p="http://primefaces.org/ui"
        xmlns:f="http://xmlns.jcp.org/jsf/core">
-<ui:composition template="WEB-INF/template.xhtml">
+<ui:composition template="../WEB-INF/template.xhtml">
     <ui:define name="title">Crear productos</ui:define>
     <ui:define name="content">
     <p:panel header="crear producto">
