--- a/ProyectoVentaProducto/web/src/main/webapp/detalle_producto.xhtml
+++ b/ProyectoVentaProducto/web/src/main/webapp/detalle_producto.xhtml
@@ -28,7 +28,7 @@
                         <h1 class="mt-4">$#{detalleProductoBean.producto.precio}</h1>
 
                         <h:form class="mt-4" rendered="#{seguridadBean.autenticado}" >
-                            <p:commandButton value="Añadir al carrito" icon="pi pi-shopping-cart" update="@form" action="#{seguridadBean.agregarAlCarrito(detalleProductoBean.producto.codigo, detalleProductoBean.producto.precio, detalleProductoBean.producto.nombre, detalleProductoBean.producto.imagenPrincipal)}" />
+                            <p:commandButton value="Añadir al carrito" icon="pi pi-shopping-cart" update="@form" action="#{seguridadBean.agregarAlCarrito(detalleProductoBean.producto.codigoProducto, detalleProductoBean.producto.precio, detalleProductoBean.producto.nombre, detalleProductoBean.producto.imagenPrincipal)}" />
                             <p:growl for="add-cart" showDetail="true" />
                         </h:form>
                     </div>
