--- a/ProyectoVentaProducto/web/src/main/webapp/usuario/carrito.xhtml
+++ b/ProyectoVentaProducto/web/src/main/webapp/usuario/carrito.xhtml
@@ -2,11 +2,83 @@
 <!DOCTYPE html
         PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-    <title>Title</title>
-</head>
-<body>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:jsf="http://xmlns.jcp.org/jsf"
+      xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:c="http://java.sun.com/jsf/html">
 
-</body>
+<ui:composition template="../WEB-INF/template.xhtml">
+    <ui:define name="title">Carrito compra</ui:define>
+    <ui:define name="content">
+
+        <div class="row w-100">
+
+            <div class="col-lg-12 col-md-12 col-12">
+                <h:form id="form">
+                    <h1>Carrito de Compra</h1>
+                    <p class="mb-5 text-center">
+                        <i class="text-info font-weight-bold">#{seguridadBean.productosCarrito.size()}</i> productos en el carrito</p>
+                    <table id="shoppingCart" class="table table-condensed table-responsive">
+                        <thead>
+                        <tr>
+                            <th style="width:60%">Producto</th>
+                            <th style="width:12%">Precio</th>
+                            <th style="width:10%">Cantidad</th>
+                            <th style="width:16%"></th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <p:repeat value="#{seguridadBean.productosCarrito}" var="producto" varStatus="p">
+                            <tr>
+                                <td >
+                                    <div class="row">
+                                        <div class="col-md-2 text-left">
+                                            <p:graphicImage value="/uploads/#{producto.imagen}" class="img-fluid d-none d-md-block rounded mb-2 shadow "/>
+
+                                        </div>
+                                        <div class="col-md-10 text-left mt-sm-2">
+                                            <h4>#{producto.nombre}</h4>
+                                            <p class="font-weight-light">Brand &amp; Name</p>
+                                        </div>
+                                    </div>
+                                </td>
+                                <td >#{producto.precio}</td>
+                                <td >
+                                    <p:spinner value="#{producto.unidades}" min="1" />
+                                </td>
+                                <td class="actions">
+                                    <div class="text-right">
+                                        <c:commandButton icon="pi pi-trash" update="@form" action="#{seguridadBean.eliminarDelCarrito(p.index)}" styleClass="btn btn-white border-secondary bg-white btn-md mb-2" />
+                                    </div>
+                                </td>
+                            </tr>
+                        </p:repeat>
+
+
+                        </tbody>
+                    </table>
+                    <div class="text-end">
+                        <h4>Subtotal:</h4>
+                        <h1>#{seguridadBean.subtotal}</h1>
+                    </div>
+                </h:form>
+            </div>
+
+        </div>
+        <div class="row mt-4 d-flex align-items-center">
+            <div class="col-sm-6 order-md-2 text-right">
+                <h:form >
+                    <p:commandButton value="Comprar" update="@form"/>
+                </h:form>
+
+            </div>
+
+        </div>
+
+
+    </ui:define>
+</ui:composition>
+
 </html>
