--- a/ProyectoVentaProducto/web/src/main/webapp/detalle_producto.xhtml
+++ b/ProyectoVentaProducto/web/src/main/webapp/detalle_producto.xhtml
@@ -35,7 +35,7 @@
                     <div class="box" >
                         <p>Ciudad: #{detalleProductoBean.producto.ciudad.nombreCiudad}</p>
                     </div>
-                    <p:dataList emptyMessage="No hay cayegorías para este producto" styleClass="lista-carac" value="#{detalleProductoBean.producto.categoriasProducto}" var="categoria">
+                    <p:dataList emptyMessage="No hay cayegorías para este producto" styleClass="lista-carac" value="#{detalleProductoBean.producto.obtenerCategorias(detalleProductoBean.producto.categoriasProducto)}" var="categoria">
                         <f:facet name="header">Categoría</f:facet>
                         <p>#{categoria}</p>
                     </p:dataList>
