--- a/ProyectoVentaProducto/web/src/main/webapp/usuario/carrito.xhtml
+++ b/ProyectoVentaProducto/web/src/main/webapp/usuario/carrito.xhtml
@@ -52,7 +52,7 @@
                                 </td>
                                 <td class="actions">
                                     <div class="text-right">
-                                        <c:commandButton icon="pi pi-trash" update="@form" action="#{seguridadBean.eliminarDelCarrito(p.index)}" styleClass="btn btn-white border-secondary bg-white btn-md mb-2" />
+                                        <p:commandButton icon="pi pi-trash" update="@form" action="#{seguridadBean.eliminarDelCarrito(p.index)}" styleClass="btn btn-white border-secondary bg-white btn-md mb-2" />
                                     </div>
                                 </td>
                             </tr>
