--- a/ProyectoVentaProducto/web/src/main/webapp/WEB-INF/template.xhtml
+++ b/ProyectoVentaProducto/web/src/main/webapp/WEB-INF/template.xhtml
@@ -60,6 +60,12 @@
                                     <p>Iniciar como adm</p>
                                 </a>
                             </li>
+                            <li>
+                                <a href="index.xhtml" class="nav-link text-white">
+                                    <i class="pi pi-shopping-cart b di-block mx-auto mb- icon-menu" style="font-size: 2rem"></i>
+                                    <p>Subasta</p>
+                                </a>
+                            </li>
                         </ul>
                     </div>
                 </div>
